ADD Other Skills content ADD Hobbies Content ADD Contact Content UPDATE Large Screen disposition

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <p>WEBDESIGNER&nbsp X &nbspFRONT END DEVELOPER</p>
                             </div>
                             <div class="row main-social-icon">
-                                <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-linkedin fa-2x"></i></a>
+                                <a href="https://fr.linkedin.com/in/lucas-randria-83b315115"><i class="fa fa-linkedin fa-2x"></i></a>
                                 <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-viadeo fa-2x"></i></a>
                                 <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-github fa-2x"></i></a>
                                 <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-envelope-o fa-2x"></i></a>
@@ -262,16 +262,34 @@
                                                         <span class="skills-txt">Bootstrap(3)</span>
                                                     </li>
                                                     <li>
+                                                        <span><br></span>
+                                                    </li>
+                                                    <li>
                                                         <span class="skills-txt">JavaScript</span>
                                                     </li>
                                                     <li>
                                                         <span class="skills-txt">JQuery</span>
                                                     </li>
                                                     <li>
+                                                        <span><br></span>
+                                                    </li>
+                                                    <li>
                                                         <span class="skills-txt">PHP</span>
                                                     </li>
                                                     <li>
                                                         <span class="skills-txt">MySQL</span>
+                                                    </li>
+                                                    <li>
+                                                        <span><br></span>
+                                                    </li>
+                                                    <li>
+                                                        <span class="skills-txt">JAVA(POO)</span>
+                                                    </li>
+                                                    <li>
+                                                        <span class="skills-txt">C</span>
+                                                    </li>
+                                                    <li>
+                                                        <span class="skills-txt">C++</span>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -299,6 +317,9 @@
                                                         <i class="fa fa-star-o skills-star" aria-hidden="true"></i>
                                                     </li>
                                                     <li>
+                                                        <span><br></span>
+                                                    </li>
+                                                    <li>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
@@ -313,6 +334,9 @@
                                                         <i class="fa fa-star-o skills-star" aria-hidden="true"></i>
                                                     </li>
                                                     <li>
+                                                        <span><br></span>
+                                                    </li>
+                                                    <li>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
@@ -324,6 +348,30 @@
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star-o skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-o skills-star" aria-hidden="true"></i>
+                                                    </li>
+                                                    <li>
+                                                        <span><br></span>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-o skills-star" aria-hidden="true"></i>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-half-o skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-o skills-star" aria-hidden="true"></i>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star skills-star" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-half-o skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star-o skills-star" aria-hidden="true"></i>
                                                     </li>
                                                 </ul>
@@ -343,6 +391,9 @@
                                                     </li>
                                                     <li>
                                                         <span class="skills-txt">Adobe InDesign (CC)</span>
+                                                    </li>
+                                                    <li>
+                                                        <span><br></span>
                                                     </li>
                                                     <li>
                                                         <span class="skills-txt">Adobe Premiere Pro (CS6)</span>
@@ -376,6 +427,8 @@
                                                         <i class="fa fa-star-o skills-star" aria-hidden="true"></i>
                                                     </li>
                                                     <li>
+                                                    </li>
+                                                    <li>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star skills-star" aria-hidden="true"></i>
@@ -393,25 +446,108 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row">
+                                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 col-lg-offset-4 other-skills">
+                                            <p class="subtitle"> Autres Compétences </p>
+                                            <ul>
+                                                <li>
+                                                    Français : Langue maternelle
+                                                </li>
+                                                <li>
+                                                    Anglais : Bon niveau
+                                                </li>
+                                                <li>
+                                                    Italien : Niveau scolaire
+                                                </li>
+                                                <li>
+                                                    <span><br></span>
+                                                </li>
+                                                <li>
+                                                    Permis B
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
                             <!-- HOBBIES -->
                             <div class="row framework">
                                 <p class="title"> Hobbies </p>
-                                <div class="sub">
-
+                                <div class="sub hobbies">
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 hobbies-left-col">
+                                        <p class="subtitle"> Musique </p>
+                                        <div class="row">
+                                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                <ul>
+                                                    <li>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Diplôme d'Étude Musicale du Conservatoire de Cannes</span>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Guitare (15 ans de pratique)</span>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Trombone (13 ans de pratique)</span>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Piano auto-didacte (9 ans de pratique)</span>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Accompagnateur de Daisy D</span>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Composition</span>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                        <p class="subtitle"> Sport </p>
+                                        <div class="row">
+                                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                <ul>
+                                                    <li>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Ceinture Noire 1er Dan de Judo (15 ans de pratique) <br>&emsp; 7ème au Championnat de France Cadet de Judo</span>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Basket (pratique régulière depuis 10 ans) <br>&emsp; Équipe de Basket Universitaire</span>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <p> Actuellement étudiant en dernière année de Bachelor, je suis Développeur Front End. </p>
                             </div>
 
                             <!-- CONTACT -->
-                            <div class="row framework">
+                            <div class="row framework contact">
                                 <p class="title"> Contact </p>
                                 <div class="sub">
-
+                                    <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 col-lg-offset-1 contact-left-col">
+                                        <ul>
+                                            <li>
+                                                <i class="fa fa-home fa-2x" aria-hidden="true"></i> <span> 3, Avenue Ferdinand Buisson<br> &emsp;&emsp; 75016 - Paris </span>
+                                            </li>
+                                            <li>
+                                                <a href="tel:+33650989822"><i class="fa fa-mobile fa-3x" aria-hidden="true"></i><span class="contact-txt"> 06 50 98 98 22</span></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                        <ul>
+                                            <li>
+                                                <a href="lucas.randria@hotmail.fr"><i class="fa fa-envelope-o fa-2x"></i><span class="contact-txt"> lucas.randria@hotmail.fr</span></a>
+                                            </li>
+                                            <li>
+                                                <a href="https://fr.linkedin.com/in/lucas-randria-83b315115"><i class="fa fa-linkedin fa-2x"></i><span class="contact-txt"> linkedin.com/in/lucas-randria</span></a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.viadeo.com/invitation/lucas.randria1"><i class="fa fa-viadeo fa-2x"></i><span class="contact-txt"> viadeo.com/p/lucasrandria</span></a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <p> Actuellement étudiant en dernière année de Bachelor, je suis Développeur Front End. </p>
                             </div>
 
                          </div>
