--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" >
+        <link href="css/flag-icon/css/flag-icon.min.css" rel="stylesheet" >
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet">
@@ -38,7 +39,7 @@
                                 <a href="https://fr.linkedin.com/in/lucas-randria-83b315115"><i class="fa fa-linkedin fa-2x"></i></a>
                                 <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-viadeo fa-2x"></i></a>
                                 <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-github fa-2x"></i></a>
-                                <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-envelope-o fa-2x"></i></a>
+                                <a href="mailto:lucas.randria@hotmail.fr"><i class="fa fa-envelope-o fa-2x"></i></a>
                             </div>
                             <div class="row main-message">
                                 <h6>Cliquez sur la photo pour accéder au CV</h6>
@@ -92,11 +93,11 @@
                             </div>
 
                             <!-- FORMATION -->
-                            <div class="row framework">
+                            <div class="row framework formation">
                                 <p class="title"> Formation </p>
                                 <div class="sub">
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-lg-offset-3">
-                                        <div class="row formation">
+                                        <div class="row formation-content">
                                             <div class="row formation-name">
                                                 <p>Bachelor Développeur en Génie Logiciel Web & Mobilité (par alternance)</p>
                                             </div>
@@ -110,7 +111,7 @@
                                                 <p></p>
                                             </div>
                                         </div>
-                                        <div class="row formation">
+                                        <div class="row formation-content">
                                             <div class="row formation-name">
                                                 <p>Diplôme d'Ingénieur Généraliste</p>
                                             </div>
@@ -124,7 +125,7 @@
                                                 <p></p>
                                             </div>
                                         </div>
-                                        <div class="row formation">
+                                        <div class="row formation-content">
                                             <div class="row formation-name">
                                                 <p>DUT Génie Électrique et Informatique Industrielle</p>
                                             </div>
@@ -141,7 +142,7 @@
                                                 <p></p>
                                             </div>
                                         </div>
-                                        <div class="row formation">
+                                        <div class="row formation-content">
                                             <div class="row formation-name">
                                                 <p>Baccalauréat Scientifique</p>
                                             </div>
@@ -164,11 +165,11 @@
                             </div>
 
                             <!-- EXPÉRIENCES PROFESSIONNELLES -->
-                            <div class="row framework">
+                            <div class="row framework XP">
                                 <p class="title"> Expériences Professionnelles </p>
                                 <div class="sub">
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-lg-offset-3">
-                                        <div class="row XP">
+                                        <div class="row XP-content">
                                             <div class="row XP-job">
                                                 <p>Développeur Front End Junior (alternance)</p>
                                             </div>
@@ -182,7 +183,7 @@
                                                 <p></p>
                                             </div>
                                         </div>
-                                        <div class="row XP">
+                                        <div class="row XP-content">
                                             <div class="row XP-job">
                                                 <p>Développeur (stage)</p>
                                             </div>
@@ -197,7 +198,7 @@
                                             </div>
                                         </div>
                                         <p class="subtitle"> Autres Expériences </p>
-                                        <div class="row XP">
+                                        <div class="row XP-content">
                                             <div class="row XP-job">
                                                 <p>Commis de salle</p>
                                             </div>
@@ -211,7 +212,7 @@
                                                 <p></p>
                                             </div>
                                         </div>
-                                        <div class="row XP">
+                                        <div class="row XP-content">
                                             <div class="row XP-job">
                                                 <p>Commis de bar</p>
                                             </div>
@@ -225,7 +226,7 @@
                                                 <p></p>
                                             </div>
                                         </div>
-                                        <div class="row XP">
+                                        <div class="row XP-content">
                                             <div class="row XP-job">
                                                 <p>Équipier Polyvalent</p>
                                             </div>
@@ -244,9 +245,9 @@
                             </div>
 
                             <!-- COMPÉTENCES -->
-                            <div class="row framework">
+                            <div class="row framework skills">
                                 <p class="title"> Compétences </p>
-                                <div class="sub skills">
+                                <div class="sub">
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 skills-left-col">
                                         <p class="subtitle"> Informatique </p>
                                         <div class="row">
@@ -447,34 +448,68 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 col-lg-offset-4 other-skills">
+                                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 col-lg-offset-4 o-skills">
                                             <p class="subtitle"> Autres Compétences </p>
-                                            <ul>
-                                                <li>
-                                                    Français : Langue maternelle
-                                                </li>
-                                                <li>
-                                                    Anglais : Bon niveau
-                                                </li>
-                                                <li>
-                                                    Italien : Niveau scolaire
-                                                </li>
-                                                <li>
-                                                    <span><br></span>
-                                                </li>
-                                                <li>
-                                                    Permis B
-                                                </li>
-                                            </ul>
+                                            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 o-skills-left-col">
+                                                <ul>
+                                                    <li>
+                                                        <i class="flag-icon flag-icon-fr"></i>
+                                                    </li>
+                                                    <li>
+                                                        <i class="flag-icon flag-icon-gb"></i>
+                                                    </li>
+                                                    <li>
+                                                        <i class="flag-icon flag-icon-it"></i>
+                                                    </li>
+                                                    <li>
+                                                        <br>
+                                                    </li>
+                                                    <li>
+                                                        <i class="fa fa-car" aria-hidden="true"></i>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 o-skills-mid-col">
+                                                <ul>
+                                                    <li>
+                                                        Français :
+                                                    </li>
+                                                    <li>
+                                                        Anglais :
+                                                    </li>
+                                                    <li>
+                                                        Italien :
+                                                    </li>
+                                                    <li>
+                                                        <br>
+                                                    </li>
+                                                    <li>
+                                                        Permis B
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 o-skills-right-col">
+                                                <ul>
+                                                    <li>
+                                                        Langue maternelle
+                                                    </li>
+                                                    <li>
+                                                        Bon niveau
+                                                    </li>
+                                                    <li>
+                                                        Niveau scolaire
+                                                    </li>
+                                                </ul>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
                             <!-- HOBBIES -->
-                            <div class="row framework">
+                            <div class="row framework hobbies">
                                 <p class="title"> Hobbies </p>
-                                <div class="sub hobbies">
+                                <div class="sub">
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 hobbies-left-col">
                                         <p class="subtitle"> Musique </p>
                                         <div class="row">
@@ -537,7 +572,7 @@
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                         <ul>
                                             <li>
-                                                <a href="lucas.randria@hotmail.fr"><i class="fa fa-envelope-o fa-2x"></i><span class="contact-txt"> lucas.randria@hotmail.fr</span></a>
+                                                <a href="mailto:lucas.randria@hotmail.fr"><i class="fa fa-envelope-o fa-2x"></i><span class="contact-txt"> lucas.randria@hotmail.fr</span></a>
                                             </li>
                                             <li>
                                                 <a href="https://fr.linkedin.com/in/lucas-randria-83b315115"><i class="fa fa-linkedin fa-2x"></i><span class="contact-txt"> linkedin.com/in/lucas-randria</span></a>
