UPDATE Contact display UPDATE Hobbies list icon

--- a/index.html
+++ b/index.html
@@ -516,22 +516,22 @@
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <ul>
                                                     <li>
-                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Diplôme d'Étude Musicale du Conservatoire de Cannes</span>
+                                                        <i class="fa fa-music" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Diplôme d'Étude Musicale du Conservatoire de Cannes</span>
                                                     </li>
                                                     <li>
-                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Guitare (15 ans de pratique)</span>
+                                                        <i class="fa fa-music" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Guitare (15 ans de pratique)</span>
                                                     </li>
                                                     <li>
-                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Trombone (13 ans de pratique)</span>
+                                                        <i class="fa fa-music" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Trombone (13 ans de pratique)</span>
                                                     </li>
                                                     <li>
-                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Piano auto-didacte (9 ans de pratique)</span>
+                                                        <i class="fa fa-music" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Piano auto-didacte (9 ans de pratique)</span>
                                                     </li>
                                                     <li>
-                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Accompagnateur de Daisy D</span>
+                                                        <i class="fa fa-music" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Accompagnateur de Daisy D</span>
                                                     </li>
                                                     <li>
-                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Composition</span>
+                                                        <i class="fa fa-music" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Composition</span>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -543,10 +543,10 @@
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <ul>
                                                     <li>
-                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Ceinture Noire 1er Dan de Judo (15 ans de pratique) <br>&emsp; 7ème au Championnat de France Cadet de Judo</span>
+                                                        <i class="fa fa-trophy" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Ceinture Noire 1er Dan de Judo (15 ans de pratique) <br>&emsp; 7ème au Championnat de France Cadet de Judo</span>
                                                     </li>
                                                     <li>
-                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Basket (pratique régulière depuis 10 ans) <br>&emsp; Équipe de Basket Universitaire</span>
+                                                        <i class="fa fa-trophy" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Basket (pratique régulière depuis 10 ans) <br>&emsp; Équipe de Basket Universitaire</span>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -560,6 +560,32 @@
                                 <p class="title"> Contact </p>
                                 <div class="sub">
                                     <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 col-lg-offset-1 contact-left-col">
+                                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 contact-icon-col">
+                                            <ul>
+                                                <li>
+                                                    <i class="fa fa-home" aria-hidden="true"></i>
+                                                </li>
+                                                <li>
+                                                    <br>
+                                                </li>
+                                                <li>
+                                                    <i class="fa fa-mobile" aria-hidden="true"></i>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 contact-info-col">
+                                            <ul>
+                                                <li>
+                                                    3, Avenue Ferdinand Buisson<br>75016 - Paris
+                                                </li>
+                                                <li>
+                                                    <a href="tel:+33650989822"><span class="contact-txt"> 06 50 98 98 22</span></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+
+
+                                        <!-- OLD
                                         <ul>
                                             <li>
                                                 <i class="fa fa-home fa-2x" aria-hidden="true"></i> <span> 3, Avenue Ferdinand Buisson<br> &emsp;&emsp; 75016 - Paris </span>
@@ -567,9 +593,40 @@
                                             <li>
                                                 <a href="tel:+33650989822"><i class="fa fa-mobile fa-3x" aria-hidden="true"></i><span class="contact-txt"> 06 50 98 98 22</span></a>
                                             </li>
-                                        </ul>
+                                        </ul> -->
+
+
                                     </div>
-                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 contact-right-col">
+                                        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 contact-icon-col">
+                                            <ul>
+                                                <li>
+                                                    <i class="fa fa-envelope-o"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="fa fa-linkedin"></i>
+                                                </li>
+                                                <li>
+                                                    <i class="fa fa-viadeo"></i>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 contact-info-col">
+                                            <ul>
+                                                <li>
+                                                    <a href="mailto:lucas.randria@hotmail.fr"><span class="contact-txt"> lucas.randria@hotmail.fr</span></a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://fr.linkedin.com/in/lucas-randria-83b315115"><span class="contact-txt"> linkedin.com/in/lucas-randria</span></a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://www.viadeo.com/invitation/lucas.randria1"><span class="contact-txt"> viadeo.com/p/lucasrandria</span></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+
+
+                                        <!-- OLD
                                         <ul>
                                             <li>
                                                 <a href="mailto:lucas.randria@hotmail.fr"><i class="fa fa-envelope-o fa-2x"></i><span class="contact-txt"> lucas.randria@hotmail.fr</span></a>
@@ -580,7 +637,9 @@
                                             <li>
                                                 <a href="https://www.viadeo.com/invitation/lucas.randria1"><i class="fa fa-viadeo fa-2x"></i><span class="contact-txt"> viadeo.com/p/lucasrandria</span></a>
                                             </li>
-                                        </ul>
+                                        </ul>-->
+
+
                                     </div>
                                 </div>
                             </div>
