UPDATE Mobile Main display

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </div>
 
                         </div>
-                    </div>
+                     </div>
 
                     <!-- Contenu -->
                     <div class="row content">
@@ -546,7 +546,7 @@
                                                         <i class="fa fa-trophy" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Ceinture Noire 1er Dan de Judo (15 ans de pratique) <br>&emsp; 7ème au Championnat de France Cadet de Judo</span>
                                                     </li>
                                                     <li>
-                                                        <i class="fa fa-trophy" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Basket (pratique régulière depuis 10 ans) <br>&emsp; Équipe de Basket Universitaire</span>
+                                                        <i class="fa fa-square" aria-hidden="true"></i><span class="hobbies-txt"> &nbsp;Basket (pratique régulière depuis 10 ans) <br>&emsp; Équipe de Basket Universitaire</span>
                                                     </li>
                                                 </ul>
                                             </div>
