UPDATE About Me section smartphone design

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                         <div class="col-md-4 col-sm-4 col-xs-4">
                                             <p> <strong>Nom:</strong> </br>Lucas Randria</p>
                                         </div>
-                                        <div class="col-md-4 col-sm-4 col-xs-4">
+                                        <div class="col-md-3 col-sm-3 col-xs-3 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
                                             <p> <strong>Age:</strong> </br>21 ans</p>
                                         </div>
                                         <div class="col-md-4 col-sm-4 col-xs-4">
